--- a/changelog.txt
+++ b/changelog.txt
@@ -111,8 +111,12 @@ v2.4 release - 6/11/21
 		*This is going to be used to help improve the server using member suggestions
 
 ***CURRENT VERSION***
-v2.5 release - 9/20/2021
+v2.5 release - 9/21/2021
 	-new !inventory command
 		-this new command is the only thing added this update, but it's a big one!
 		-can be used to track multiple parties' inventories and collective banks
 		-uses the new buttons feature in order to simplify use
+		-items can have values that can be changed, i.e. for arrows or ball bearings
+		-bank can store copper, silver, and gold
+		-can store as many inventories as you want
+	-probably the final update, barring any small necessary fixes, due to the discord.py library no longer being worked on, and will break in April 2022
